@@ -9,3 +9,4 @@ xml:
     lang.xml
     tag.xml
     test_case_framework.xml
+    event.xml
