@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<form string="Event Type">
+    <label name="name"/>
+    <field name="name"/>
+    <label name="code"/>
+    <field name="code"/>
+</form>
