@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<tree string="Event Types">
+    <field name="name"/>
+    <field name="code"/>
+</tree>
