@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<data>
+    <xpath expr="/form/group[@id='checkboxes']" position="after">
+        <label name="event_type"/>
+        <field name="event_type"/>
+        <newline/>
+    </xpath>
+</data>
+
