@@ -1,0 +1,30 @@
+<?xml version="1.0"?>
+<tryton>
+    <data>
+        <record model="ir.ui.view" id="event_log_view_form">
+            <field name="model">event.log</field>
+            <field name="type">form</field>
+            <field name="name">event_log_form</field>
+        </record>
+        <record model="ir.ui.view" id="event_log_view_list">
+            <field name="model">event.log</field>
+            <field name="type">tree</field>
+            <field name="name">event_log_list</field>
+        </record>
+        <record model="ir.action.act_window" id="act_event_log_form">
+            <field name="name">Event Logs</field>
+            <field name="res_model">event.log</field>
+        </record>
+        <record model="ir.action.act_window.view" id="act_event_log_form_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="event_log_view_list"/>
+            <field name="act_window" ref="act_event_log_form"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_event_log_form_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="event_log_view_form"/>
+            <field name="act_window" ref="act_event_log_form"/>
+        </record>
+        <menuitem parent="cog_utils.menu_event" sequence="20" id="menu_event_log" action="act_event_log_form"/>
+    </data>
+</tryton>
