@@ -1,0 +1,7 @@
+[tryton]
+depends:
+    ir
+    res
+    cog_utils
+xml:
+    event_log.xml
