@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+<tree>
+    <field name="date"/>
+    <field name="user"/>
+    <field name="event_type"/>
+    <field name="object_"/>
+    <field name="description"/>
+</tree>
